adding dockerfile and buildsepc to publish repo to aws ECR

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "docker compose up -d dev_db && nest start --watch --debug",
+    "start:dev": "docker compose up -d dev_db && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
